cabal-version:      3.0
name:               leak-test
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

executable leak-test
  import:           warnings
  main-is:          Main.hs

  build-depends:    base <5

  ghc-options: -threaded

  c-sources: cbits/test.c

  hs-source-dirs:   app
  default-language: GHC2021
